updates for typed and form submission stuff

--- a/public/assets/css/argon.css
+++ b/public/assets/css/argon.css
@@ -572,6 +572,13 @@ h6,
     line-height: 1.5;
 }
 
+.display-5
+{
+    font-size: 1.6275rem;
+    font-weight: 600;
+    line-height: 1.5;
+}
+
 hr
 {
     margin-top: 2rem;
